--- a/about.html
+++ b/about.html
@@ -1,1 +1,100 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>about.html</title><link rel='stylesheet' href='assets/css/style.css'></head><body><h1>About Us</h1><p>About page placeholder content.</p></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>About — Exonova</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="index.html">
+        <img src="assets/images/logo.svg" alt="Exonova" class="logo" />
+        <span class="brand-text">Exonova</span>
+      </a>
+      <nav class="main-nav" id="mainNav">
+        <a href="index.html">Home</a>
+        <a href="about.html" class="active">About</a>
+        <a href="our-technology.html">Technology</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html" class="cta">Contact</a>
+      </nav>
+      <button id="navToggle" class="nav-toggle">☰</button>
+    </div>
+  </header>
+
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <h1>About Exonova</h1>
+        <p class="lede">We are focused on impactful scientific solutions that move research and diagnostics forward.</p>
+      </div>
+    </section>
+
+    <section class="about-grid container">
+      <div class="about-media">
+        <img src="https://picsum.photos/720/480?random=201" alt="About placeholder" />
+      </div>
+      <div class="about-copy">
+        <h2>Mission & Vision</h2>
+        <p>Our mission is to accelerate discoveries through robust instrumentation and intelligent software. We partner with academic and industry groups to turn data into decisions.</p>
+
+        <h3>Values</h3>
+        <ul>
+          <li>Scientific rigor</li>
+          <li>Open collaboration</li>
+          <li>User-focused design</li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="team container">
+      <h2 class="section-title">Leadership</h2>
+      <div class="team-grid">
+        <article>
+          <img src="https://picsum.photos/260/260?random=202" alt="Leader 1" />
+          <h4>Dr. Jane Doe</h4>
+          <p>CEO &amp; Co-founder</p>
+        </article>
+        <article>
+          <img src="https://picsum.photos/260/260?random=203" alt="Leader 2" />
+          <h4>Dr. John Smith</h4>
+          <p>CTO</p>
+        </article>
+        <article>
+          <img src="https://picsum.photos/260/260?random=204" alt="Leader 3" />
+          <h4>Dr. Priya Kumar</h4>
+          <p>Head of Product</p>
+        </article>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <strong>Exonova</strong>
+        <p>Innovating life sciences.</p>
+      </div>
+      <div>
+        <h4>Contact</h4>
+        <p>Email: info@example.com</p>
+      </div>
+      <div>
+        <h4>Quick Links</h4>
+        <nav>
+          <a href="index.html">Home</a><br />
+          <a href="our-technology.html">Technology</a><br />
+          <a href="services.html">Services</a>
+        </nav>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">© <span id="year"></span> Exonova. All rights reserved.</div>
+    </div>
+  </footer>
+
+  <script src="assets/js/script.js"></script>
+</body>
+</html>
