--- a/services.html
+++ b/services.html
@@ -1,1 +1,77 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>services.html</title><link rel='stylesheet' href='assets/css/style.css'></head><body><h1>Services</h1><p>Services overview placeholder.</p></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Services — Exonova</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="index.html">
+        <img src="assets/images/logo.svg" alt="Exonova" class="logo" />
+        <span class="brand-text">Exonova</span>
+      </a>
+      <nav class="main-nav" id="mainNav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="our-technology.html">Technology</a>
+        <a href="services.html" class="active">Services</a>
+        <a href="contact.html" class="cta">Contact</a>
+      </nav>
+      <button id="navToggle" class="nav-toggle">☰</button>
+    </div>
+  </header>
+
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <h1>Services</h1>
+        <p class="lede">Services designed to support discovery, validation and scale-up.</p>
+      </div>
+    </section>
+
+    <section class="services-list container">
+      <article class="service-item">
+        <h3>Assay Development</h3>
+        <p>Customized assay development and validation for research and clinical needs.</p>
+      </article>
+      <article class="service-item">
+        <h3>Instrument Integration</h3>
+        <p>Hardware and software integration tailored to customer workflows.</p>
+      </article>
+      <article class="service-item">
+        <h3>Training & Support</h3>
+        <p>On-site and remote training, plus long-term support contracts.</p>
+      </article>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <strong>Exonova</strong>
+        <p>Innovating life sciences.</p>
+      </div>
+      <div>
+        <h4>Contact</h4>
+        <p>Email: info@example.com</p>
+      </div>
+      <div>
+        <h4>Quick Links</h4>
+        <nav>
+          <a href="index.html">Home</a><br />
+          <a href="about.html">About</a><br />
+          <a href="our-technology.html">Technology</a>
+        </nav>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">© <span id="year"></span> Exonova. All rights reserved.</div>
+    </div>
+  </footer>
+
+  <script src="assets/js/script.js"></script>
+</body>
+</html>
