--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,84 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>contact.html</title><link rel='stylesheet' href='assets/css/style.css'></head><body><h1>Contact</h1><p>Contact form placeholder.</p></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Contact — Exonova</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="index.html">
+        <img src="assets/images/logo.svg" alt="Exonova" class="logo" />
+        <span class="brand-text">Exonova</span>
+      </a>
+      <nav class="main-nav" id="mainNav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="our-technology.html">Technology</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html" class="active cta">Contact</a>
+      </nav>
+      <button id="navToggle" class="nav-toggle">☰</button>
+    </div>
+  </header>
+
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <h1>Contact Us</h1>
+        <p class="lede">Send a message and our team will respond within 48 hours.</p>
+      </div>
+    </section>
+
+    <section class="contact-form container">
+      <!-- Replace `your_form_id` with your actual Formspree form ID -->
+      <form id="contactForm" action="https://formspree.io/f/your_form_id" method="POST">
+        <div class="form-row">
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" required />
+        </div>
+        <div class="form-row">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required />
+        </div>
+        <div class="form-row">
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="6" required></textarea>
+        </div>
+        <div class="form-row">
+          <button class="btn primary" type="submit">Send message</button>
+        </div>
+        <p class="disclaimer">This contact form uses Formspree. Replace <code>your_form_id</code> with your form ID from Formspree to receive messages via email.</p>
+      </form>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <strong>Exonova</strong>
+        <p>Innovating life sciences.</p>
+      </div>
+      <div>
+        <h4>Contact</h4>
+        <p>Email: info@example.com</p>
+      </div>
+      <div>
+        <h4>Quick Links</h4>
+        <nav>
+          <a href="index.html">Home</a><br />
+          <a href="about.html">About</a><br />
+          <a href="our-technology.html">Technology</a>
+        </nav>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">© <span id="year"></span> Exonova. All rights reserved.</div>
+    </div>
+  </footer>
+
+  <script src="assets/js/script.js"></script>
+</body>
+</html>
