--- a/our-technology.html
+++ b/our-technology.html
@@ -1,1 +1,87 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>our-technology.html</title><link rel='stylesheet' href='assets/css/style.css'></head><body><h1>Our Technology</h1><p>Technology details placeholder.</p></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Technology — Exonova</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="index.html">
+        <img src="assets/images/logo.svg" alt="Exonova" class="logo" />
+        <span class="brand-text">Exonova</span>
+      </a>
+      <nav class="main-nav" id="mainNav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="our-technology.html" class="active">Technology</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html" class="cta">Contact</a>
+      </nav>
+      <button id="navToggle" class="nav-toggle">☰</button>
+    </div>
+  </header>
+
+  <main>
+    <section class="page-hero">
+      <div class="container">
+        <h1>Our Technology</h1>
+        <p class="lede">A concise overview of our platform components and how they integrate.</p>
+      </div>
+    </section>
+
+    <section class="tech-overview container">
+      <div class="tech-grid">
+        <article>
+          <img src="https://picsum.photos/420/260?random=301" alt="Tech 1" />
+          <h4>Hardware Platform</h4>
+          <p>Precision instrumentation with modular design for flexible deployment.</p>
+        </article>
+        <article>
+          <img src="https://picsum.photos/420/260?random=302" alt="Tech 2" />
+          <h4>Software Suite</h4>
+          <p>Intuitive software for experiment control and data capture.</p>
+        </article>
+        <article>
+          <img src="https://picsum.photos/420/260?random=303" alt="Tech 3" />
+          <h4>Analytics & AI</h4>
+          <p>Machine learning pipelines for pattern detection and insight generation.</p>
+        </article>
+      </div>
+    </section>
+
+    <section class="tech-details container">
+      <h2>Integration & Support</h2>
+      <p>Our offering includes installation, validation and ongoing technical support. We prioritize reproducibility and compliance in every deployment.</p>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <strong>Exonova</strong>
+        <p>Innovating life sciences.</p>
+      </div>
+      <div>
+        <h4>Contact</h4>
+        <p>Email: info@example.com</p>
+      </div>
+      <div>
+        <h4>Quick Links</h4>
+        <nav>
+          <a href="index.html">Home</a><br />
+          <a href="about.html">About</a><br />
+          <a href="services.html">Services</a>
+        </nav>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">© <span id="year"></span> Exonova. All rights reserved.</div>
+    </div>
+  </footer>
+
+  <script src="assets/js/script.js"></script>
+</body>
+</html>
